@@ -3,6 +3,7 @@
 
 #include <time.h>
 #include <stdio.h>
+#include <math.h>
 #include "consts.h"
 
 #define DB_EN 1
